--- a/.github/workflows/_ci-node.yml
+++ b/.github/workflows/_ci-node.yml
@@ -12,45 +12,32 @@ jobs:
     name: ci
     runs-on: ubuntu-latest
     timeout-minutes: 15
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "18"
           cache: npm
 
-      - name: Detect Node lockfile
-        id: node
-        run: |
-          if [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
-            echo "has_lock=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "has_lock=false" >> "$GITHUB_OUTPUT"
-          fi
-
       - name: Install dependencies
-        if: steps.node.outputs.has_lock == "true"
         run: npm ci
-        timeout-minutes: 5
 
       - name: Run tests
-        if: steps.node.outputs.has_lock == "true"
-        run: npm test -- --ci
+        run: npm test
 
       - name: Login to GHCR
-        if: github.event_name != "pull_request" || github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event_name != "pull_request"
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & push container
-        if: github.event_name != "pull_request" || github.event.pull_request.head.repo.full_name == github.repository
+      - name: Build and push container
+        if: github.event_name != "pull_request"
         uses: docker/build-push-action@v6
         with:
           context: .
