--- a/.github/workflows/_ci-node.yml
+++ b/.github/workflows/_ci-node.yml
@@ -33,16 +33,17 @@ jobs:
           fi
 
       - name: Install dependencies
-        if: steps.node.outputs.has_lock == "true"
+        if: steps.node.outputs.has_lock == 'true'
         run: npm ci
         timeout-minutes: 5
 
       - name: Run tests
-        if: steps.node.outputs.has_lock == "true"
+        if: steps.node.outputs.has_lock == 'true'
         run: npm test -- --ci
 
+      # Push only when it’s our own repo (not a fork PR)
       - name: Login to GHCR
-        if: github.event_name != "pull_request" || github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -50,7 +51,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & push container
-        if: github.event_name != "pull_request" || github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         uses: docker/build-push-action@v6
         with:
           context: .
