--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: ["dev", "staging", "main"]
   schedule:
-    - cron: "0 2 * * 0"  # weekly, Sunday 02:00 UTC
+    - cron: "0 2 * * 0"  # weekly
 
 permissions:
   contents: read
@@ -20,24 +20,10 @@ jobs:
   analyze:
     name: Analyze (javascript)
     runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ["javascript"] # add more later: ["javascript","python","java",...]
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+      - uses: actions/checkout@v4
+      - uses: github/codeql-action/init@v3
         with:
-          languages: ${{ matrix.language }}
-
-      # Optional for JS, but recommended in the official template
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Analyze
-        uses: github/codeql-action/analyze@v3
+          languages: javascript
+      - uses: github/codeql-action/autobuild@v3
+      - uses: github/codeql-action/analyze@v3
