--- a/.github/workflows/deploy-local.yml
+++ b/.github/workflows/deploy-local.yml
@@ -22,17 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Helm
-        uses: Azure/setup-helm@v4
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
+      - uses: Azure/setup-helm@v4
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Deploy with Helm (dry-run)
         run: |
           helm upgrade --install demo-app deploy/chart \
@@ -40,12 +35,3 @@ jobs:
             --set image.tag=${{ inputs.image_tag }} \
             --set env.name=${{ inputs.env_name }} \
             --dry-run --debug
-
-      - name: Show deployment info
-        run: |
-          echo "🎯 Deployment Summary:"
-          echo "Environment: ${{ inputs.env_name }}"
-          echo "Image: ghcr.io/${{ github.repository_owner }}/demo-app:${{ inputs.image_tag }}"
-          echo "Chart: deploy/chart"
-          echo ""
-          echo "To deploy to a real cluster, configure kubectl context and remove --dry-run"
