Title: release: promote staging → main (#34)
* feat(chart): add Helm chart stub for dev auto-deploy demo

* chore: update workflows (ci, deploy, codeql, release), CODEOWNERS and README

* chore: fix yamllint violations across workflows

* chore: satisfy yamllint across workflows (brackets/colons/EOF/indent)

* fix(release): use softprops for auto notes (#12)

* fix(release): use softprops for auto notes (#12) (#13)

* chore(ci): run CI on PRs only; deploy on push; release on tags (#15)

* New CI Changes (#16)

* fix(release): use softprops for auto notes (#12)

* chore(ci): run CI on PRs only; deploy on push; release on tags (#15)

* Main (#18)

* Promote: release workflow to main (#14)

* feat(chart): add Helm chart stub for dev auto-deploy demo

* chore: update workflows (ci, deploy, codeql, release), CODEOWNERS and README

* chore: fix yamllint violations across workflows

* chore: satisfy yamllint across workflows (brackets/colons/EOF/indent)

* fix(release): use softprops for auto notes (#12) (#13)

* Staging to Prod  (#17)

* feat(chart): add Helm chart stub for dev auto-deploy demo

* chore: update workflows (ci, deploy, codeql, release), CODEOWNERS and README

* chore: fix yamllint violations across workflows

* chore: satisfy yamllint across workflows (brackets/colons/EOF/indent)

* fix(release): use softprops for auto notes (#12) (#13)

* New CI Changes (#16)

* fix(release): use softprops for auto notes (#12)

* chore(ci): run CI on PRs only; deploy on push; release on tags (#15)

* chore(workflow): update service-deploy.yml to use central reusable workflow

* fix(workflows): move environment gate into reusable; remove illegal environment keys from callers

* Chore/update service deploy (#19)

* chore(workflow): update service-deploy.yml to use central reusable workflow

* fix(workflows): move environment gate into reusable; remove illegal environment keys from callers

* staging to prod (#20)

* fix(release): use softprops for auto notes (#12)

* chore(c

--- a/.github/workflows/auto-sync-main-to-dev.yml
+++ b/.github/workflows/auto-sync-main-to-dev.yml
@@ -1,17 +1,50 @@
-name: Auto sync main to dev
+name: Auto sync main → dev
 
 on:
+  release:
+    types: [published]
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 permissions:
   contents: read
   pull-requests: write
 
+concurrency:
+  group: auto-sync-main-to-dev
+  cancel-in-progress: true
+
 jobs:
-  sync:
+  open-sync-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Sync notification
-        run: |
-          echo "Manual sync workflow triggered"
-          echo "This would create a PR from main to dev in a real scenario"
+      - name: Compare branches
+        id: compare
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const {owner, repo} = context.repo;
+            const cmp = await github.rest.repos.compareCommits({ owner, repo, base: 'dev', head: 'main' });
+            core.setOutput('behind_by', String(cmp.data.behind_by));
+
+      - name: Open PR if dev is behind
+        if: steps.compare.outputs.behind_by != '0'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const {owner, repo} = context.repo;
+            const prs = await github.rest.pulls.list({ owner, repo, state: 'open', base: 'dev', head: `${owner}:main` });
+            if (prs.data.length) {
+              core.notice(`Sync PR already open: #${prs.data[0].number}`);
+              return;
+            }
+            const pr = await github.rest.pulls.create({
+              owner, repo,
+              title: 'chore(sync): main → dev',
+              head: 'main',
+              base: 'dev',
+              body: 'Automated sync of production branch **main** back into **dev** after release.',
+            });
+            core.notice(`Opened PR #${pr.data.number}`);
