--- a/.github/workflows/deploy-local.yml
+++ b/.github/workflows/deploy-local.yml
@@ -3,23 +3,35 @@ name: deploy-local
 on:
   workflow_dispatch:
     inputs:
+      image_tag:
+        description: "Image tag to deploy"
+        required: false
+        default: "latest"
       env_name:
-        description: "Environment"
+        description: "Environment name"
         type: choice
         options: ["dev", "staging", "production"]
+        required: true
         default: "dev"
+
+permissions:
+  contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Helm
-        uses: Azure/setup-helm@v4
-        
-      - name: Simulate deployment
+      - uses: Azure/setup-helm@v4
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy with Helm (dry-run)
         run: |
-          echo "Deploying to ${{ inputs.env_name }}"
-          helm template demo-app deploy/chart --dry-run
-          echo "Deployment simulation successful"
+          helm upgrade --install demo-app deploy/chart \
+            --set image.repository=ghcr.io/${{ github.repository_owner }}/demo-app \
+            --set image.tag=${{ inputs.image_tag }} \
+            --set env.name=${{ inputs.env_name }} \
+            --dry-run --debug
