--- a/.github/workflows/service-deploy.yml
+++ b/.github/workflows/service-deploy.yml
@@ -2,98 +2,148 @@ name: service-deploy
 
 on:
   push:
-    branches: [ "dev", "staging", "main" ]
+    branches: ["dev", "staging", "main"]
   workflow_dispatch:
     inputs:
       env_name:
-        description: "Environment to render for"
+        description: "Target environment"
         type: choice
-        options: [ "dev", "staging", "production" ]
+        options: ["dev", "staging", "production"]
+        required: true
         default: "dev"
       image_tag:
-        description: "Image tag to render (defaults to run number)"
+        description: "Image tag (defaults to run number)"
         required: false
+        default: ""
 
 permissions:
   contents: read
 
-concurrency:
-  group: service-deploy-${{ github.ref }}
-  cancel-in-progress: true
-
-env:
-  CHART_PATH: deploy/chart
-  IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
-  IMAGE_TAG: ${{ inputs.image_tag || github.run_number }}
-
+# ---------------------- DEV (auto) ----------------------
 jobs:
-  # -------- DEV (no approval gate) --------
   auto-deploy-dev:
     if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
+    name: auto-deploy-dev
     runs-on: ubuntu-latest
+    concurrency:
+      group: deploy-dev
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - uses: Azure/setup-helm@v4
-      - name: Helm lint (dev)
-        run: helm lint $CHART_PATH
-      - name: Helm template (dev / dry-run)
+
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Render manifests (dev)
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+          IMAGE_TAG: ${{ github.run_number }}
         run: |
-          helm template demo-app $CHART_PATH \
-            --set image.repository=$IMAGE_REPO \
-            --set image.tag=${{ github.run_number }} \
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
             --set env.name=dev \
             --debug
 
-  # -------- STAGING (approval gate via Environment) --------
-  auto-deploy-staging:
+# ------------------- STAGING (gated) --------------------
+  staging-deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
+    name: staging-deploy
     runs-on: ubuntu-latest
-    environment: staging           # <-- requires approval before job starts
+    environment: staging        # <-- Configure approvals in Settings → Environments → staging
+    concurrency:
+      group: deploy-staging
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - uses: Azure/setup-helm@v4
-      - name: Helm lint (staging)
-        run: helm lint $CHART_PATH
-      - name: Helm template (staging / dry-run)
+
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Render manifests (staging)
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+          IMAGE_TAG: ${{ github.run_number }}
         run: |
-          helm template demo-app $CHART_PATH \
-            --set image.repository=$IMAGE_REPO \
-            --set image.tag=${{ github.run_number }} \
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
             --set env.name=staging \
             --debug
 
-  # -------- PRODUCTION (approval gate via Environment) --------
-  auto-deploy-production:
+# ------------------- PRODUCTION (gated) -----------------
+  production-deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    name: production-deploy
     runs-on: ubuntu-latest
-    environment: production        # <-- requires approval before job starts
+    environment: production     # <-- Configure approvals in Settings → Environments → production
+    concurrency:
+      group: deploy-production
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - uses: Azure/setup-helm@v4
-      - name: Helm lint (prod)
-        run: helm lint $CHART_PATH
-      - name: Helm template (prod / dry-run)
+
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Render manifests (production)
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+          IMAGE_TAG: ${{ github.run_number }}
         run: |
-          helm template demo-app $CHART_PATH \
-            --set image.repository=$IMAGE_REPO \
-            --set image.tag=${{ github.run_number }} \
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
             --set env.name=production \
             --debug
 
-  # -------- Manual on-demand render (inherits env gates) --------
+# ------------------- Manual on-demand run ----------------
   manual-deploy:
     if: github.event_name == 'workflow_dispatch'
+    name: manual-deploy
     runs-on: ubuntu-latest
-    environment: ${{ inputs.env_name }}   # staging/prod will prompt approval
+    # Attach to the chosen environment so staging/prod approvals apply on manual runs too
+    environment: ${{ inputs.env_name }}
+    concurrency:
+      group: deploy-${{ inputs.env_name }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
-      - uses: Azure/setup-helm@v4
-      - name: Helm lint (${{ inputs.env_name }})
-        run: helm lint $CHART_PATH
-      - name: Helm template (${{ inputs.env_name }} / dry-run)
+
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Compute image tag
+        id: tag
         run: |
-          helm template demo-app $CHART_PATH \
-            --set image.repository=$IMAGE_REPO \
-            --set image.tag=$IMAGE_TAG \
+          if [ -n "${{ inputs.image_tag }}" ]; then
+            echo "IMAGE_TAG=${{ inputs.image_tag }}" >> "$GITHUB_ENV"
+          else
+            echo "IMAGE_TAG=${{ github.run_number }}" >> "$GITHUB_ENV"
+          fi
+
+      - name: Render manifests (${{ inputs.env_name }})
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+        run: |
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
             --set env.name=${{ inputs.env_name }} \
             --debug
