--- a/.github/workflows/auto-sync-main-to-dev.yml
+++ b/.github/workflows/auto-sync-main-to-dev.yml
@@ -1,120 +1,149 @@
-name: Auto sync main → dev
+name: service-deploy
 
 on:
-  release:
-    types: [published]          # When a GitHub Release is published
   push:
-    tags: ["v*"]                # Or when a version tag is pushed
-  workflow_dispatch: {}         # Manual run
+    branches: ["dev", "staging", "main"]
+  workflow_dispatch:
+    inputs:
+      env_name:
+        description: "Target environment"
+        type: choice
+        options: ["dev", "staging", "production"]
+        required: true
+        default: "dev"
+      image_tag:
+        description: "Image tag (defaults to run number)"
+        required: false
+        default: ""
 
 permissions:
-  contents: write               # needed to push a sync branch
-  pull-requests: write          # needed to open/update PRs
+  contents: read
 
-concurrency:
-  group: auto-sync-main-to-dev
-  cancel-in-progress: true
-
+# ---------------------- DEV (auto) ----------------------
 jobs:
-  prepare:
+  auto-deploy-dev:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
+    name: auto-deploy-dev
     runs-on: ubuntu-latest
-    outputs:
-      behind_by: ${{ steps.compare.outputs.behind_by }}
+    concurrency:
+      group: deploy-dev
+      cancel-in-progress: true
     steps:
-      - name: Compare dev…main
-        id: compare
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const r = await github.rest.repos.compareCommits({
-              owner, repo, base: 'dev', head: 'main'
-            });
-            core.setOutput('behind_by', String(r.data.behind_by));
+      - uses: actions/checkout@v4
 
-  sync:
-    needs: prepare
-    if: needs.prepare.outputs.behind_by != '0'
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Render manifests (dev)
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+          IMAGE_TAG: ${{ github.run_number }}
+        run: |
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
+            --set env.name=dev \
+            --debug
+
+# ------------------- STAGING (gated) --------------------
+  staging-deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
+    name: staging-deploy
     runs-on: ubuntu-latest
-    env:
-      SYNC_BRANCH: sync/main-to-dev-${{ github.run_id }}
+    environment: staging        # <-- Configure approvals in Settings → Environments → staging
+    concurrency:
+      group: deploy-staging
+      cancel-in-progress: true
     steps:
-      - name: Checkout dev (full history)
-        uses: actions/checkout@v4
-        with:
-          ref: dev
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      - name: Configure git user
-        run: |
-          git config user.name  "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
 
-      - name: Create sync branch from dev
-        run: |
-          git fetch origin main dev
-          git switch -c "$SYNC_BRANCH" origin/dev
+      - name: Helm lint
+        run: helm lint deploy/chart
 
-      - name: Merge main → dev (pre-resolve service-deploy.yml)
-        shell: bash
+      - name: Render manifests (staging)
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+          IMAGE_TAG: ${{ github.run_number }}
         run: |
-          set -euxo pipefail
-          if ! git merge --no-ff --no-edit origin/main; then
-            git checkout --ours .github/workflows/service-deploy.yml || true
-            git add .github/workflows/service-deploy.yml || true
-            git commit -m "sync(main→dev): keep dev copy of service-deploy.yml"
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
+            --set env.name=staging \
+            --debug
+
+# ------------------- PRODUCTION (gated) -----------------
+  production-deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    name: production-deploy
+    runs-on: ubuntu-latest
+    environment: production     # <-- Configure approvals in Settings → Environments → production
+    concurrency:
+      group: deploy-production
+      cancel-in-progress: true
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Render manifests (production)
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+          IMAGE_TAG: ${{ github.run_number }}
+        run: |
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
+            --set env.name=production \
+            --debug
+
+# ------------------- Manual on-demand run ----------------
+  manual-deploy:
+    if: github.event_name == 'workflow_dispatch'
+    name: manual-deploy
+    runs-on: ubuntu-latest
+    # Attach to the chosen environment so staging/prod approvals apply on manual runs too
+    environment: ${{ inputs.env_name }}
+    concurrency:
+      group: deploy-${{ inputs.env_name }}
+      cancel-in-progress: true
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Helm
+        uses: Azure/setup-helm@v4
+
+      - name: Helm lint
+        run: helm lint deploy/chart
+
+      - name: Compute image tag
+        id: tag
+        run: |
+          if [ -n "${{ inputs.image_tag }}" ]; then
+            echo "IMAGE_TAG=${{ inputs.image_tag }}" >> "$GITHUB_ENV"
+          else
+            echo "IMAGE_TAG=${{ github.run_number }}" >> "$GITHUB_ENV"
           fi
-          git push -u origin "$SYNC_BRANCH"
 
-      - name: Open or update PR (→ dev)
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const head = process.env.SYNC_BRANCH;
-            const list = await github.rest.pulls.list({
-              owner, repo, state: 'open', base: 'dev', head: `${owner}:${head}`
-            });
-            let pr;
-            if (list.data.length) {
-              pr = list.data[0];
-            } else {
-              pr = (await github.rest.pulls.create({
-                owner, repo,
-                title: 'chore(sync): main → dev',
-                base: 'dev',
-                head,
-                body: [
-                  'Automated sync of **main** back into **dev** after release.',
-                  '',
-                  '- Pre-resolved `.github/workflows/service-deploy.yml` to keep dev copy.',
-                  '- Merge method: regular **merge** (preserves prod SHAs).'
-                ].join('\n')
-              })).data;
-            }
-            core.setOutput('number', pr.number);
-            core.notice(`Opened/updated PR #${pr.number}`);
-
-      - name: Enable auto-merge (MERGE) if allowed
-        continue-on-error: true
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const number = Number("${{ steps.pr.outputs.number }}");
-            const q = await github.graphql(
-              `query($owner:String!,$repo:String!,$number:Int!){
-                 repository(owner:$owner,name:$repo){
-                   pullRequest(number:$number){ id }
-                 }
-               }`, { owner, repo, number }
-            );
-            const id = q.repository.pullRequest.id;
-            await github.graphql(
-              `mutation($id:ID!){
-                 enablePullRequestAutoMerge(input:{
-                   pullRequestId:$id, mergeMethod:MERGE
-                 }) { clientMutationId }
-               }`, { id }
-            );
+      - name: Render manifests (${{ inputs.env_name }})
+        env:
+          IMAGE_REPO: ghcr.io/${{ github.repository_owner }}/demo-app
+        run: |
+          echo "IMAGE: $IMAGE_REPO:$IMAGE_TAG"
+          helm template demo-app deploy/chart \
+            --set image.repository="$IMAGE_REPO" \
+            --set image.tag="$IMAGE_TAG" \
+            --set env.name=${{ inputs.env_name }} \
+            --debug
